fix: updates classes and styling for selector on product and content layout spacing.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -444,7 +444,7 @@ input[name='q']::placeholder {
 
 @media (min-width: 992px) {
     .header-container {
-        padding-top: 102px;
+        padding-top: 164px;
     }
 
     .topnav {
